<resources>
    <string name="app_name" translatable="false">Yet Another Battery Notifier</string>
    <string name="yet_another_battery_notifier" translatable="false">Yet Another Battery Notifier</string>
    <string name="yet_another_battery_notifier_is_running">Yet Another Battery Notifier is running.</string>
    <string name="default_channel">Foreground Service</string>
    <string name="default_channel_description">This channel is for the on going notification when foreground service is running which is necessary for the app\'s function.</string>
    <string name="channel_notify">Charged Notification</string>
    <string name="channel_notify_description">Channel for charged notification.</string>
    <string name="settings">Settings</string>
    <string name="YABN_settings">YABN Settings</string>
    <string name="channel_settings">Settings</string>
    <string name="channel_settings_description">Notification channel for Settings.</string>
    <string name="always_show_current">Always Monitor</string>
    <string name="frequency">Frequency</string>
    <string name="disable_auto_boot">Disable Auto Boot</string>
    <string name="one_sec">1s</string>
    <string name="two_sec">2s</string>
    <string name="five_sec">5s</string>
    <string name="one_min">1min</string>
    <string name="name_shared_pref" translatable="false">com.maary.yetanotherbatterynotifier.pref</string>
    <string name="shared_pref_frequency" translatable="false">frequency</string>
    <string name="qstile_inactive">YABN not running</string>
    <string name="qstile_active">YABN is running</string>
    <string name="boolean_always_show_speed" translatable="false">Always show speed Boolean</string>
    <string name="only_charging_current">Monitor when charging</string>
    <string name="need_restart_service">Please restart YABN service</string>
    <string name="cancel">Cancel</string>
    <string name="string_monitoring" translatable="false">%1$s mA | %2$s °C</string>
    <string name="charged">Your phone has been charged to %1$d%2$s.</string>
    <string name="notification_dnd_info_start">\nDND will start at %1$s</string>
    <string name="notification_dnd_info_end">\nDND will end at %1$s</string>
    <string name="current_scale">Current is so fucking LARGE/SMALL!</string>
    <string name="always_show_current_summary">Always show battery current even when discharging.</string>
    <string name="frequency_summary">How often should YABN update battery data?</string>
    <string name="fuck_android_oem_summary">These stupid OEMs can\'t even implement a universal API properly. Come here and fix it then fuck them. If it\'s too big, choose a larger multiplier; if it\'s too small, choose a smaller multiplier.</string>
    <string name="shared_pref_ratio" translatable="false">ratio</string>
    <string name="fuck_oem">Value too …</string>
    <string name="fucking_high">High!</string>
    <string name="fucking_low">Low!</string>
    <string name="dnd_1hour">DND 1h</string>
    <string name="dnd" translatable="false">DND</string>
    <string name="dnd_enable_time" translatable="false">dnd_enabled_time</string>
    <string name="dnd_ing">Dnding</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <string name="fuck_oem_hidden">FUCK OEMs</string>
    <string name="fuck_oem_regular">Inaccurate current readings</string>
    <string name="fuck_oem_hidden_description">They can\'t even adapt the API well.</string>
    <string name="fuck_oem_regular_description">On different OEM devices, the units used by the API for obtaining current magnitude may vary, resulting in values that are too large or too small</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_settings_description">Configure notification importance</string>
    <string name="enable_foreground_service">Enable Service</string>
    <string name="enable_foreground_service_description">Start monitoring battery current and temperature</string>
    <string name="charge_notification">When To Notify</string>
    <string name="charge_notification_description">Send notification when the battery level reaches the set values</string>
    <string name="notification_level_1">Limit 1</string>
    <string name="notification_level_2">Limit 2</string>
    <string name="frequency_description">Information update frequency</string>
    <string name="dnd_enable_title">DND Routine</string>
    <string name="dnd_enable_description">Notifications will not be sent during the following time period</string>
    <string name="dnd_start_time">Start</string>
    <string name="dnd_end_time">End</string>
    <string name="dnd_content_description_on">DND state ON</string>
    <string name="dnd_content_description_off">DND state OFF</string>
    <string name="value_too_small">Scale Up</string>
    <string name="value_too_large">Scale Down</string>
    <string name="invert_polarity">Invert Polarity</string>

</resources>